--- a/.github/workflows/blog-posts.yml
+++ b/.github/workflows/blog-posts.yml
@@ -1,8 +1,8 @@
 name: Latest blog post workflow
 on:
   schedule:
-    # Runs every hour
-    - cron: "0 * * * *"
+    ## Runs at 12am UTC
+    - cron: '0 0 * * *'
   workflow_dispatch:
 
 jobs:
