--- a/.github/workflows/blog-posts.yml
+++ b/.github/workflows/blog-posts.yml
@@ -2,7 +2,7 @@ name: Latest blog post workflow
 on:
   schedule:
     ## Runs at 12am UTC
-    - cron: '0 0 * * *'
+    - cron: "0 0 * * *"
   workflow_dispatch:
 
 jobs:
@@ -13,4 +13,4 @@ jobs:
       - uses: actions/checkout@v2
       - uses: gautamkrishnar/blog-post-workflow@master
         with:
-          feed_list: "https://dev.to/feed/michaelgee22"
+          feed_list: "https://dev.to/feed/michaelgee"
